feat: improved tests for the methods, added update routes with their respective tests too
